--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  --background-start-rgb: 255, 255, 255;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -14,6 +14,10 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  margin: 0;
+  font-family: "Geomanist", sans-serif;
+
+  padding: 0;
   display: grid;
   place-items: center;
   background: linear-gradient(
