--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,10 +16,11 @@ body {
   color: rgb(var(--foreground-rgb));
   margin: 0;
   font-family: "Geomanist", sans-serif;
-
+  width: 100%;
   padding: 0;
   display: grid;
   place-items: center;
+  text-align: center;
   background: linear-gradient(
       to bottom,
       transparent,
